--- a/example.env
+++ b/example.env
@@ -1,5 +1,6 @@
 
-# NOTE: This token expires after 24 hours. You can get a new one from the your Meta App Dashboard > API Setup
+# This token expires after 24 hours. You can get a new one from the your Meta App Dashboard > API Setup
+# Or you can create an access token at the System User level from the Meta Business Settings: https://business.facebook.com/settings/system-users
 ACCESS_TOKEN=""
 
 APP_ID=""
