--- a/example.env
+++ b/example.env
@@ -5,10 +5,11 @@ ACCESS_TOKEN=""
 
 APP_ID=""
 APP_SECRET=""
-RECIPIENT_WAID=""
+RECIPIENT_WAID="" # Your WhatsApp number with country code (e.g., +31612345678)
 VERSION="v18.0"
 PHONE_NUMBER_ID=""
 
-OPENAI_API_KEY=""
-WHATSAPP_TOKEN=""
 VERIFY_TOKEN=""
+
+OPENAI_API_KEY=""
+OPENAI_ASSISTANT_ID=""
